--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -4,7 +4,6 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import "compass";
 
-
 *, body {
 
   margin: 0;
@@ -33,12 +32,27 @@ body {
   position: absolute;
   top: 50px;
   width: 100%;
+  max-width: 100%;
   left: 0;
   z-index: 1;
+  overflow: hidden;
+  img {
+    width: 100%;
+    min-width: 1000px;
+  }
+}
+
+#subtitulo {
+  width: 100%;
+  text-align: center;
+  font-size: 10vmin;
+  margin-bottom: 10vmin;
+  font-weight: 700;
+  color: whitesmoke;
 }
 
 #main {
-  margin-top: 200px;
+  margin-top: 20%;
   min-width: 100%;
 }
 
@@ -151,7 +165,7 @@ body {
   flex-direction: row;
   min-width: 100%;
 
-  .fa{
+  .fa {
     color: black !important;
   }
 
@@ -170,12 +184,12 @@ body {
   }
 }
 
-.login-input-container{
+.login-input-container {
   margin: 10px 0 10px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  input{
+  input {
     min-width: 60%;
   }
 }
@@ -210,16 +224,15 @@ body {
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5);
 }
 
-#back-top{
+#back-top {
   position: fixed;
   bottom: 40px;
   right: 40px;
   z-index: 10;
-  i{
+  i {
     color: white;
   }
 }
-
 
 .parrafo-in {
   -webkit-animation: parrafo-in 1s ease;
@@ -233,20 +246,23 @@ body {
 }
 
 .logo-main {
+  min-width: 360px;
+  width: 50%;
+
   -webkit-animation: logo-in 1s ease;
   -o-animation: logo-in 1s ease;
   animation: logo-in 1s ease;
-  
+
 }
 
 @keyframes logo-in {
-  0%{
+  0% {
     opacity: 0;
   }
-  100%{
+  100% {
     opacity: 1;
   }
-  
+
 }
 
 @keyframes parrafo-in {
@@ -287,6 +303,107 @@ body {
   background-color: #562F2E;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   transform: translateZ(0);
   -webkit-transform: translateZ(0);
+}
+
+#side-nav {
+  z-index: 90;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  min-width: 200px;
+  width: 30%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -ms-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.menu-item {
+
+  margin: 5px 0 5px 10px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 34px;
+  color: black;
+  padding: 10px;
+  span {
+
+    margin-left: 15px;
+  }
+
+}
+
+.menu-item:hover {
+  background-color: #562F2E;
+  color: white;
+}
+
+.side-nav-closed {
+  -webkit-transform: translateX(100%) !important;
+  -moz-transform: translateX(100%) !important;
+  -ms-transform: translateX(100%) !important;
+  -o-transform: translateX(100%) !important;
+  transform: translateX(100%) !important;
+
+}
+
+.nav-button-transformed {
+}
+
+.nav-button {
+  flex: 1;
+
+  margin-right: 15px;
+
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -ms-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+
+  transform-origin: 13px 13px;
+  transform-style: preserve-3D;
+
+  cursor: pointer;
+  div {
+    cursor: pointer;
+    width: 26px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #ffffff;
+    margin: 4px;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
+  }
+
+  .nav-button-top-transformed {
+    -webkit-transform: rotate(45deg) translateY(11px);
+    -moz-transform: rotate(45deg) translateY(11px);
+    -ms-transform: rotate(45deg) translateY(11px);
+    -o-transform: rotate(45deg) translateY(11px);
+    transform: rotate(45deg) translateY(11px);
+  }
+  .nav-button-mid-transformed {
+    opacity: 0;
+  }
+  .nav-button-bot-transformed {
+    -webkit-transform: rotate(-45deg) translateY(-12px);
+    -moz-transform: rotate(-45deg) translateY(-12px);
+    -ms-transform: rotate(-45deg) translateY(-12px);
+    -o-transform: rotate(-45deg) translateY(-12px);
+    transform: rotate(-45deg) translateY(-12px);
+  }
 }
