--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -174,6 +174,12 @@ body {
   }
 }
 
+.post-list:hover{
+
+  background-color: #562F2E;
+  color: white;
+}
+
 .login, #registro {
   display: flex;
   justify-content: center;
