--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -321,7 +321,8 @@ body {
   top: 0;
   right: 0;
   min-width: 200px;
-  width: 30%;
+  width: 100%;
+  max-width: 300px;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -339,7 +340,7 @@ body {
 
   margin: 5px 0 5px 10px;
   font-family: 'Poppins', sans-serif;
-  font-size: 34px;
+  font-size: 4vmin !important;
   color: black;
   padding: 10px;
   span {
