--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -240,6 +240,16 @@ body {
   }
 }
 
+.administracion-input{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  color: #fff;
+  font-weight: 900;
+
+}
+
 .parrafo-in {
   -webkit-animation: parrafo-in 1s ease;
   -o-animation: parrafo-in 1s ease;
