--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -220,6 +220,15 @@ body {
   font-size: 16px;
 }
 
+.text-administracion{
+  .ta-text{
+    height: 400px !important;
+  }
+  .ta-bind{
+    height: 400px !important;
+  }
+}
+
 .btn-custom {
   border: 0 solid;
   background-color: #E65100;
