--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -225,7 +225,7 @@ body {
     height: 400px !important;
   }
   .ta-bind{
-    height: 400px !important;
+    min-height: 400px !important;
   }
 }
 
