--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -353,13 +353,17 @@ body {
   -ms-transition: all 0.4s;
   -o-transition: all 0.4s;
   transition: all 0.4s;
+
+  @media (min-width: 1400px) {
+    max-width: 500px !important;
+  }
 }
 
 .menu-item {
 
   margin: 5px 0 5px 10px;
   font-family: 'Poppins', sans-serif;
-  font-size: 4vmin !important;
+  font-size: 3vmin !important;
   color: black;
   padding: 10px;
   span {
@@ -432,4 +436,37 @@ body {
     -o-transform: rotate(-45deg) translateY(-12px);
     transform: rotate(-45deg) translateY(-12px);
   }
+}
+
+
+//=========================================================================0
+//SECCION PARA EL FOOTER
+.footer {
+  font-family: Arial, serif;
+  font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  height: 25px;
+  position: fixed;
+  bottom: 0;
+  z-index: 80;
+  min-width: 100%;
+  left: 0;
+  background-color: white;
+  box-shadow: 0px -1px 10px rgba(0,0,0,0.2);
+}
+
+.footer > p {
+  text-align: center;
+  @media (min-width: 800px) {
+    margin: 2px 0;
+  }
+}
+
+.footer > p > a {
+  text-decoration: none;
+  color: #ce5f2d;
 }
