--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -362,27 +362,33 @@ body {
   -o-transition: all 0.4s;
   transition: all 0.4s;
 }
+@media (min-width: 1400px) {
+  /* line 336, ../sass/screen.scss */
+  #side-nav {
+    max-width: 500px !important;
+  }
+}
 
-/* line 358, ../sass/screen.scss */
+/* line 362, ../sass/screen.scss */
 .menu-item {
   margin: 5px 0 5px 10px;
   font-family: 'Poppins', sans-serif;
-  font-size: 4vmin !important;
+  font-size: 3vmin !important;
   color: black;
   padding: 10px;
 }
-/* line 365, ../sass/screen.scss */
+/* line 369, ../sass/screen.scss */
 .menu-item span {
   margin-left: 15px;
 }
 
-/* line 372, ../sass/screen.scss */
+/* line 376, ../sass/screen.scss */
 .menu-item:hover {
   background-color: #562F2E;
   color: white;
 }
 
-/* line 377, ../sass/screen.scss */
+/* line 381, ../sass/screen.scss */
 .side-nav-closed {
   -webkit-transform: translateX(100%) !important;
   -moz-transform: translateX(100%) !important;
@@ -391,7 +397,7 @@ body {
   transform: translateX(100%) !important;
 }
 
-/* line 389, ../sass/screen.scss */
+/* line 393, ../sass/screen.scss */
 .nav-button {
   flex: 1;
   margin-right: 15px;
@@ -404,7 +410,7 @@ body {
   transform-style: preserve-3D;
   cursor: pointer;
 }
-/* line 404, ../sass/screen.scss */
+/* line 408, ../sass/screen.scss */
 .nav-button div {
   cursor: pointer;
   width: 26px;
@@ -418,7 +424,7 @@ body {
   -o-transition: all 0.4s;
   transition: all 0.4s;
 }
-/* line 418, ../sass/screen.scss */
+/* line 422, ../sass/screen.scss */
 .nav-button .nav-button-top-transformed {
   -webkit-transform: rotate(45deg) translateY(11px);
   -moz-transform: rotate(45deg) translateY(11px);
@@ -426,15 +432,51 @@ body {
   -o-transform: rotate(45deg) translateY(11px);
   transform: rotate(45deg) translateY(11px);
 }
-/* line 425, ../sass/screen.scss */
+/* line 429, ../sass/screen.scss */
 .nav-button .nav-button-mid-transformed {
   opacity: 0;
 }
-/* line 428, ../sass/screen.scss */
+/* line 432, ../sass/screen.scss */
 .nav-button .nav-button-bot-transformed {
   -webkit-transform: rotate(-45deg) translateY(-12px);
   -moz-transform: rotate(-45deg) translateY(-12px);
   -ms-transform: rotate(-45deg) translateY(-12px);
   -o-transform: rotate(-45deg) translateY(-12px);
   transform: rotate(-45deg) translateY(-12px);
+}
+
+/* line 444, ../sass/screen.scss */
+.footer {
+  font-family: Arial, serif;
+  font-size: 16px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  height: 25px;
+  position: fixed;
+  bottom: 0;
+  z-index: 80;
+  min-width: 100%;
+  left: 0;
+  background-color: white;
+  box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* line 462, ../sass/screen.scss */
+.footer > p {
+  text-align: center;
+}
+@media (min-width: 800px) {
+  /* line 462, ../sass/screen.scss */
+  .footer > p {
+    margin: 2px 0;
+  }
+}
+
+/* line 469, ../sass/screen.scss */
+.footer > p > a {
+  text-decoration: none;
+  color: #ce5f2d;
 }
